# mini-dj

./: .gitignore  README.md  hello.py  justfile  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
project/orders/: models.py  serializers.py  views.py
project/orders/migrations/: 0001_initial.py  0002_salesorder_user.py  0003_salesorder_products.py
project/products/: admin.py  models.py  serializers.py
project/products/migrations/: 0001_initial.py  0002_productdetails_product_product_details.py
project/project/: asgi.py  settings.py  urls.py  wsgi.py
project/static/: app.js
project/templates/: index.html  orders.html
tests/: test_hello.py
