[project]
name = "mini-dj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = []

[dependency-groups]
dev = ["pyright>=1.1.388", "ruff>=0.7.2"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D1", "D203", "D213", "ISC001"]
